@@ -26,22 +26,27 @@ enum {
 typedef struct {
 	int fd;
 	int openmode;
-} rpmlock;
+} * rpmlock;
 
-static rpmlock *rpmlock_new(const char *rootdir)
+/*@null@*/
+static rpmlock rpmlock_new(const char *rootdir)
+	/*@globals fileSystem @*/
+	/*@modifies fileSystem @*/
 {
-	rpmlock *lock = (rpmlock *)malloc(sizeof(rpmlock));
+	rpmlock lock = (rpmlock) malloc(sizeof(*lock));
 	if (lock) {
 		mode_t oldmask = umask(022);
 		char *path = (char *)malloc(strlen(rootdir)+
-					    strlen(RPMLOCK_FILE)+2);
+					    sizeof(RPMLOCK_FILE)+1);
 		if (!path) {
 			free(lock);
 			return NULL;
 		}
 		sprintf(path, "%s/%s", rootdir, RPMLOCK_FILE);
 		lock->fd = open(RPMLOCK_FILE, O_RDWR|O_CREAT, 0644);
-		umask(oldmask);
+		(void) umask(oldmask);
+
+/*@-branchstate@*/
 		if (lock->fd == -1) {
 			lock->fd = open(RPMLOCK_FILE, O_RDONLY);
 			if (lock->fd == -1) {
@@ -53,19 +58,25 @@ static rpmlock *rpmlock_new(const char *rootdir)
 		} else {
 			lock->openmode = RPMLOCK_WRITE | RPMLOCK_READ;
 		}
+/*@=branchstate@*/
 	}
+/*@-compdef@*/
 	return lock;
+/*@=compdef@*/
 }
 
-static void rpmlock_free(rpmlock *lock)
+static void rpmlock_free(/*@only@*/ /*@null@*/ rpmlock lock)
+	/*@globals fileSystem, internalState @*/
+	/*@modifies lock, fileSystem, internalState @*/
 {
 	if (lock) {
-		close(lock->fd);
+		(void) close(lock->fd);
 		free(lock);
 	}
 }
 
-static int rpmlock_acquire(rpmlock *lock, int mode)
+static int rpmlock_acquire(/*@null@*/ rpmlock lock, int mode)
+	/*@*/
 {
 	int res = 0;
 	if (lock && (mode & lock->openmode)) {
@@ -82,13 +93,16 @@ static int rpmlock_acquire(rpmlock *lock, int mode)
 		info.l_whence = SEEK_SET;
 		info.l_start = 0;
 		info.l_len = 0;
+		info.l_pid = 0;
 		if (fcntl(lock->fd, cmd, &info) != -1)
 			res = 1;
 	}
 	return res;
 }
 
-static void rpmlock_release(rpmlock *lock)
+static void rpmlock_release(/*@null@*/ rpmlock lock)
+	/*@globals internalState @*/
+	/*@modifies internalState @*/
 {
 	if (lock) {
 		struct flock info;
@@ -96,7 +110,8 @@ static void rpmlock_release(rpmlock *lock)
 		info.l_whence = SEEK_SET;
 		info.l_start = 0;
 		info.l_len = 0;
-		fcntl(lock->fd, F_SETLK, &info);
+		info.l_pid = 0;
+		(void) fcntl(lock->fd, F_SETLK, &info);
 	}
 }
 
@@ -106,10 +121,12 @@ static void rpmlock_release(rpmlock *lock)
 void *rpmtsAcquireLock(rpmts ts)
 {
 	const char *rootDir = rpmtsRootDir(ts);
-	rpmlock *lock;
+	rpmlock lock;
+
 	if (!rootDir)
 		rootDir = "/";
 	lock = rpmlock_new(rootDir);
+/*@-branchstate@*/
 	if (!lock) {
 		rpmMessage(RPMMESS_ERROR, _("can't create transaction lock\n"));
 	} else if (!rpmlock_acquire(lock, RPMLOCK_WRITE)) {
@@ -123,13 +140,14 @@ void *rpmtsAcquireLock(rpmts ts)
 			lock = NULL;
 		}
 	}
+/*@=branchstate@*/
 	return lock;
 }
 
 void rpmtsFreeLock(void *lock)
 {
-	rpmlock_release((rpmlock *)lock); /* Not really needed here. */
-	rpmlock_free((rpmlock *)lock);
+	rpmlock_release((rpmlock)lock); /* Not really needed here. */
+	rpmlock_free((rpmlock)lock);
 }
 
 
